# confocal_processing

./: .gitignore  notes  pyproject.toml
Jupyter notebooks/: jupyternb_test.ipynb
Python Scripts/: 3D_to_2D_images.py  3D_viewer_napari.py  3D_viewer_napari_drag.py  Demo_3D_visu.py  test_napari.py  thresholding.py  tif_to_png.py
confocal_processing/: tifreading.py
