[project]
name = "confocal-processing"
version = "0.1.0"
description = "Functions to process confocal imaging"
authors = [
    {name = "Andrea"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "napari (>=0.6.6,<0.7.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "locomyco-imganalysis @ git+https://github.com/labudzki/LOCOMYCO_ImgAnalysis.git"
   
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
LOCOMYCO_ImgAnalysis = { git = "https://github.com/labudzki/LOCOMYCO_ImgAnalysis.git", branch = "main" }

